--- a/mksolucion/Views/Cuentas/ConfirmEmail.cshtml
+++ b/mksolucion/Views/Cuentas/ConfirmEmail.cshtml
@@ -21,7 +21,7 @@
             <div class="col-md-8 col-md-offset-2 text-xs-center">
                 <div>
                     <p>
-                        Gracias por confirmar su correo electrónico. @Html.ActionLink("Haga clic aquí para iniciar sesión", "Iniciar sesión", "Cuenta", routeValues: null, htmlAttributes: new { id = "loginLink" })
+                        Gracias por confirmar su correo electrónico. @Html.ActionLink("Haga clic aquí para iniciar sesión", "Login", "Cuentas", routeValues: null, htmlAttributes: new { id = "loginLink" })
                     </p>
                 </div>
             </div>
