actualizacion de diseño

--- a/mksolucion/Areas/portal/Views/AreaSegmentoCorreo/Create.cshtml
+++ b/mksolucion/Areas/portal/Views/AreaSegmentoCorreo/Create.cshtml
@@ -1,8 +1,8 @@
 ﻿@model mksolucion.Models.crr03_areasegmento
 
 @{
-    ViewBag.Title = "Create";
-    Layout = "~/Views/Shared/_LayoutUser.cshtml";
+    ViewBag.Title = "Nueva Area o Segmento de Correo";
+    Layout = Session["layout"].ToString();
 }
 
 <h2>Nueva Area o Segmento de Correo</h2>
