--- a/mksolucion/Areas/portal/Views/AreaSegmentoCorreo/Delete.cshtml
+++ b/mksolucion/Areas/portal/Views/AreaSegmentoCorreo/Delete.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "Eliminar Areas o Segmentos de Correo";
-    Layout = "~/Views/Shared/_LayoutUser.cshtml";
+    Layout = Session["layout"].ToString();
 }
 
 <h2>Eliminar Areas o Segmentos de Correo</h2>
