--- a/mksolucion/Areas/portal/Views/AreaSegmentoCorreo/Details.cshtml
+++ b/mksolucion/Areas/portal/Views/AreaSegmentoCorreo/Details.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "Detalle de Area o Segmentos de correos";
-    Layout = "~/Views/Shared/_LayoutUser.cshtml";
+    Layout = Session["layout"].ToString();
 }
 
 <h2>Detalle de Area o Segmentos de correos</h2>
