--- a/mksolucion/Areas/portal/Views/EstadoCorreo/Create.cshtml
+++ b/mksolucion/Areas/portal/Views/EstadoCorreo/Create.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "Nuevo Estado de Correo";
-    Layout = "~/Views/Shared/_LayoutUser.cshtml";
+    Layout = Session["layout"].ToString();
 }
 
 <h2>Nuevo Estado de Correo</h2>
