--- a/mksolucion/Areas/portal/Views/EstadoCorreo/Delete.cshtml
+++ b/mksolucion/Areas/portal/Views/EstadoCorreo/Delete.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "Eliminar estados de correo";
-    Layout = "~/Views/Shared/_LayoutUser.cshtml";
+    Layout = Session["layout"].ToString();
 }
 
 <h2>Eliminar estados de correo</h2>
