--- a/mksolucion/Areas/portal/Views/EstadoCorreo/Details.cshtml
+++ b/mksolucion/Areas/portal/Views/EstadoCorreo/Details.cshtml
@@ -1,8 +1,8 @@
 ﻿@model mksolucion.Models.crr08_estadoCorreo
 
 @{
-    ViewBag.Title = "Details";
-    Layout = "~/Views/Shared/_LayoutUser.cshtml";
+    ViewBag.Title = "Detalle estado de correo";
+    Layout = Session["layout"].ToString();
 }
 
 <h2>Detalle estado de correo</h2>
