--- a/mksolucion/Areas/portal/Views/EstadoCorreo/Edit.cshtml
+++ b/mksolucion/Areas/portal/Views/EstadoCorreo/Edit.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "Editar Estados de Correo";
-    Layout = "~/Views/Shared/_LayoutUser.cshtml";
+    Layout = Session["layout"].ToString();
 }
 
 <h2>Editar Estados de Correo</h2>
