--- a/mksolucion/Areas/portal/Views/TipoCampana/Create.cshtml
+++ b/mksolucion/Areas/portal/Views/TipoCampana/Create.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "Crear Tipo de Campaña";
-    Layout = "~/Views/Shared/_LayoutUser.cshtml";
+    Layout = Session["layout"].ToString();
 }
 
 <h2>Nuevo tipo de Campaña</h2>
