--- a/mksolucion/Areas/portal/Views/TipoCampana/Delete.cshtml
+++ b/mksolucion/Areas/portal/Views/TipoCampana/Delete.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "Eliminar Tipo de Campaña";
-    Layout = "~/Views/Shared/_LayoutUser.cshtml";
+    Layout = Session["layout"].ToString();
 }
 
 <h2>Eliminar Tipos de Campaña</h2>
