--- a/mksolucion/Areas/portal/Views/TipoCuenta/Create.cshtml
+++ b/mksolucion/Areas/portal/Views/TipoCuenta/Create.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "Nuevo Tipo de cuentas de clientes";
-    Layout = "~/Views/Shared/_LayoutUser.cshtml";
+    Layout = Session["layout"].ToString();
 }
 
 <h2>Nuevo Tipo de cuentas de clientes</h2>
