--- a/mksolucion/Areas/portal/Views/TipoPlanes/Delete.cshtml
+++ b/mksolucion/Areas/portal/Views/TipoPlanes/Delete.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "Eliminar Tipo de Plan";
-    Layout = "~/Views/Shared/_LayoutUser.cshtml";
+    Layout = Session["layout"].ToString();
 }
 
 <h2>Eliminar Tipo de Plan</h2>
