--- a/mksolucion/Areas/portal/Views/TipoPlanes/Details.cshtml
+++ b/mksolucion/Areas/portal/Views/TipoPlanes/Details.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "Detalle Tipo de Plan";
-    Layout = "~/Views/Shared/_LayoutUser.cshtml";
+    Layout = Session["layout"].ToString();
 }
 
 <h2>Detalle de Tipo de Plan </h2>
