--- a/mksolucion/Areas/portal/Views/TipoPlanes/Edit.cshtml
+++ b/mksolucion/Areas/portal/Views/TipoPlanes/Edit.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "Editar tipos de planes";
-    Layout = "~/Views/Shared/_LayoutUser.cshtml";
+    Layout = Session["layout"].ToString();
 }
 
 <h2>Editar Tipos de Planes</h2>
