--- a/mksolucion/Areas/portal/Views/TipoPlanes/Index.cshtml
+++ b/mksolucion/Areas/portal/Views/TipoPlanes/Index.cshtml
@@ -1,4 +1,8 @@
-﻿
+﻿@{
+    ViewBag.Title = "Tipos de Planes de Usuario";
+    Layout = Session["layout"].ToString();
+}
+
             <h2>Tipos de Planes de Usuario</h2>
 
             <p>
