--- a/mksolucion/Areas/portal/Views/clasificacioncorreo/Delete.cshtml
+++ b/mksolucion/Areas/portal/Views/clasificacioncorreo/Delete.cshtml
@@ -1,8 +1,8 @@
 ﻿@model mksolucion.Models.crr02_tipoclasificacion
 
 @{
-    ViewBag.Title = "Delete";
-    Layout = "~/Views/Shared/_LayoutUser.cshtml";
+    ViewBag.Title = "Eliminar clasificación de listas de correo";
+    Layout = Session["layout"].ToString();
 }
 
 <h2>Eliminar clasificación de listas de correo</h2>
