--- a/mksolucion/Areas/portal/Views/clasificacioncorreo/Details.cshtml
+++ b/mksolucion/Areas/portal/Views/clasificacioncorreo/Details.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "Detalle clasificación de correos";
-    Layout = "~/Views/Shared/_LayoutUser.cshtml";
+    Layout = Session["layout"].ToString();
 }
 
 <h2>Detalle clasificación de correos</h2>
