--- a/mksolucion/Areas/portal/Views/clasificacioncorreo/Edit.cshtml
+++ b/mksolucion/Areas/portal/Views/clasificacioncorreo/Edit.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "Editar clasificación de correo";
-    Layout = "~/Views/Shared/_LayoutUser.cshtml";
+    Layout = Session["layout"].ToString();
 }
 
 <h2>Editar clasificación de correo</h2>
