--- a/mksolucion/Areas/portal/Views/clasificacionlistacorreo/Details.cshtml
+++ b/mksolucion/Areas/portal/Views/clasificacionlistacorreo/Details.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "Detalles de tipos de Clasificación de correo";
-    Layout = "~/Views/Shared/_LayoutUser.cshtml";
+    Layout = Session["layout"].ToString();
 }
 
 <h2>Details</h2>
