--- a/mksolucion/Areas/portal/Views/clasificacionlistacorreo/Edit.cshtml
+++ b/mksolucion/Areas/portal/Views/clasificacionlistacorreo/Edit.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "Editar clasificacion de listas de correos";
-    Layout = "~/Views/Shared/_LayoutUser.cshtml";
+    Layout = Session["layout"].ToString();
 }
 
 <h2>Editar clasificacion de listas de correos</h2>
