--- a/mksolucion/Areas/portal/Views/clasificacionlistacorreo/Index.cshtml
+++ b/mksolucion/Areas/portal/Views/clasificacionlistacorreo/Index.cshtml
@@ -1,4 +1,9 @@
-﻿<h2>Tipos de Clasificación en Listas de Correo</h2>
+﻿@{
+    ViewBag.Title = "Tipos de Clasificación en Listas de Correo";
+    Layout = Session["layout"].ToString();
+}
+
+<h2>Tipos de Clasificación en Listas de Correo</h2>
 
 <p>
     @Html.ActionLink("Crear Nuevo", "Create")
