--- a/mksolucion/Areas/portal/Views/TipoCampana/Details.cshtml
+++ b/mksolucion/Areas/portal/Views/TipoCampana/Details.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "Detalle de Tipo de Campaña";
-    Layout = "~/Views/Shared/_LayoutUser.cshtml";
+    Layout = Session["layout"].ToString();
 }
 
 <h2>Detalle tipo de Campaña</h2>
