--- a/mksolucion/Areas/portal/Views/TipoCuenta/Delete.cshtml
+++ b/mksolucion/Areas/portal/Views/TipoCuenta/Delete.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "Eliminar Tipos de Cuentas de clientes";
-    Layout = "~/Views/Shared/_LayoutUser.cshtml";
+    Layout = Session["layout"].ToString();
 }
 
 <h2>Eliminar Tipos de Cuentas de clientes</h2>
