--- a/mksolucion/Areas/portal/Views/clasificacionlistacorreo/Create.cshtml
+++ b/mksolucion/Areas/portal/Views/clasificacionlistacorreo/Create.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "Nueva Clasificación de listas de correo";
-    Layout = "~/Views/Shared/_LayoutUser.cshtml";
+    Layout = Session["layout"].ToString();
 }
 
 <h2>Nueva clasificación de listas de correo</h2>
