Cambio cierre seccion

--- a/mksolucion/Areas/portal/Views/Admin/Index.cshtml
+++ b/mksolucion/Areas/portal/Views/Admin/Index.cshtml
@@ -3,4 +3,11 @@
     Layout = Session["layout"].ToString();
 }
 
-admin
+
+
+<h2>SetSession</h2>
+<div>@(Session["Test"] == null ? "empty" : Session["Test"].ToString())</div>
+
+<input type="button" value="Click Here" id="btn1" />
+
+
