--- a/mksolucion/Views/Shared/_LayoutAdmin.cshtml
+++ b/mksolucion/Views/Shared/_LayoutAdmin.cshtml
@@ -6,17 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="@Url.Content("~/Content/bootstrap.min.css")" rel="stylesheet" type="text/css" />
     <link href="@Url.Content("~/Content/Site.css")" rel="stylesheet" type="text/css" />
+    
 
     <link href="https://kendo.cdn.telerik.com/2016.3.1028/styles/kendo.common-bootstrap.min.css" rel="stylesheet" type="text/css" />
     <link href="https://kendo.cdn.telerik.com/2016.3.1028/styles/kendo.bootstrap.min.css" rel="stylesheet" type="text/css" />
     <link href="https://kendo.cdn.telerik.com/2016.3.1028/styles/kendo.dataviz.bootstrap.min.css" rel="stylesheet" type="text/css" />
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.0/jquery.min.js"></script>
+        
     <script src="https://kendo.cdn.telerik.com/2016.3.1028/js/jquery.min.js"></script>
     <script src="https://kendo.cdn.telerik.com/2016.3.1028/js/jszip.min.js"></script>
     <script src="https://kendo.cdn.telerik.com/2016.3.1028/js/kendo.all.min.js"></script>
     <script src="https://kendo.cdn.telerik.com/2016.3.1028/js/kendo.aspnetmvc.min.js"></script>
 
-    <script src="@Url.Content("~/Scripts/kendo.modernizr.custom.js")"></script>
+    <script src="../../Scripts/kendo.modernizr.custom.js"></script>
 
 
 </head>
@@ -63,7 +66,7 @@
                                     <li>@Html.ActionLink("Listas de Correo", "Index", "Configuraciones", new { area = "" }, new { @class = "dropdown-item" })</li>
                                     <li>@Html.ActionLink("Clasificaciones de Correo", "Index", "clasificacioncorreo", new { area = "portal" }, new { @class = "dropdown-item" })</li>
                                     <li>@Html.ActionLink("Area o Segmento", "Index", "areasegmentocorreo", new { area = "portal" }, new { @class = "dropdown-item" })</li>
-                                    <li>@Html.ActionLink("Intereses", "Index", "Configuraciones", new { area = "" }, new { @class = "dropdown-item" })</li>
+                                    <li>@Html.ActionLink("Intereses", "Index", "intereses", new { area = "portal" }, new { @class = "dropdown-item" })</li>
                                     <li>@Html.ActionLink("Organizaciones", "Index", "Configuraciones", new { area = "" }, new { @class = "dropdown-item" })</li>
                                     <li>@Html.ActionLink("Estados de correo", "Index", "estadocorreo", new { area = "portal" }, new { @class = "dropdown-item" })</li>
                                 </ul>
@@ -95,6 +98,7 @@
                                 <ul>
                                     <li>@Html.ActionLink("Usuarios", "Index", "usuarios", new { area = "portal" }, new { @class = "dropdown-item" })</li>
                                     <li>@Html.ActionLink("Roles", "Index", "roles", new { area = "portal" }, new { @class = "dropdown-item" })</li>
+                                    <li>@Html.ActionLink("Usuario Roles", "Index", "UsuarioRoles", new { area = "portal" }, new { @class = "dropdown-item" })</li>
                                 </ul>
                             </li>
                             <li>
@@ -141,80 +145,88 @@
         </div>
     </footer>
 
-    <script>
-                $(document).ready(function () {
-                    $("#responsive-panel").kendoResponsivePanel({
-                        breakpoint: 768,
-                        autoClose: false,
-                        orientation: "top"
-                    });
-                });
-                function onclick(e) {
-                    $("#responsive-panel").getKendoResponsivePanel().toggle();
-                }
+    @RenderSection("scripts", required: false)
 
 
+@(Html.Kendo().Window()
+    .Name("window")
+    .Title("TU SESIÓN EXPIRÓ")
+    .Content(
+    @<text>
+    <div class="timeout">
+        <div class="header">
+            Session Caducada!
+        </div>
+        <div class="body">
+            Tu session expirara en &nbsp;<span id="seconds"></span>&nbsp;Segundos.<br />
+            Quieres reiniciarla?
+        </div>
+        <div class="footer" align="right">
+            @Html.ActionLink("Cerrar sesión", "Index", "Admin", new { Area = "portal" }, new { @class = "timeoutbutton" })
 
-                (function ($) {
-                    $.fn.menumaker = function (options) {
-                        var cssmenu = $(this), settings = $.extend({
-                            format: "dropdown",
-                            sticky: false
-                        }, options);
-                        return this.each(function () {
-                            $(this).find(".button").on('click', function () {
-                                $(this).toggleClass('menu-opened');
-                                var mainmenu = $(this).next('ul');
-                                if (mainmenu.hasClass('open')) {
-                                    mainmenu.slideToggle().removeClass('open');
-                                }
-                                else {
-                                    mainmenu.slideToggle().addClass('open');
-                                    if (settings.format === "dropdown") {
-                                        mainmenu.find('ul').show();
-                                    }
-                                }
-                            });
-                            cssmenu.find('li ul').parent().addClass('has-sub');
-                            multiTg = function () {
-                                cssmenu.find(".has-sub").prepend('<span class="submenu-button"></span>');
-                                cssmenu.find('.submenu-button').on('click', function () {
-                                    $(this).toggleClass('submenu-opened');
-                                    if ($(this).siblings('ul').hasClass('open')) {
-                                        $(this).siblings('ul').removeClass('open').slideToggle();
-                                    }
-                                    else {
-                                        $(this).siblings('ul').addClass('open').slideToggle();
-                                    }
-                                });
-                            };
-                            if (settings.format === 'multitoggle') multiTg();
-                            else cssmenu.addClass('dropdown');
-                            if (settings.sticky === true) cssmenu.css('position', 'fixed');
-                            resizeFix = function () {
-                                var mediasize = 700;
-                                if ($(window).width() > mediasize) {
-                                    cssmenu.find('ul').show();
-                                }
-                                if ($(window).width() <= mediasize) {
-                                    cssmenu.find('ul').hide().removeClass('open');
-                                }
-                            };
-                            resizeFix();
-                            return $(window).on('resize', resizeFix);
-                        });
-                    };
-                })(jQuery);
+            <a id="timeout-keep-signin-btn" class="timeoutbutton" onclick="ResetSession()">Mantener Sesion</a>
+        </div>
+    </div>
+    </text>)
+    .Draggable()
+    .Resizable()
+    .Height(250)
+    .Width(400)
+    .Visible(false)
+    
 
-                (function ($) {
-                    $(document).ready(function () {
-                        $("#cssmenu").menumaker({
-                            format: "multitoggle"
-                        });
-                    });
-                })(jQuery);
+)
+        
+
+    <script type="text/javascript">
+
+        var sessionTimeoutWarning = @Session.Timeout - 1;
+
+        $(document).ready(function () {
+            SessionExpireAlert(@Session.Timeout * 1000 * 60);
+
+            $("#close").click( function (e) {
+                $("#window").data("kendoWindow").close();
+            });
+
+        });
 
 
-    </script>
+        function SessionExpireAlert(timeout) {
+
+            var seconds = timeout / 1000;
+        
+            document.getElementsByName("secondsIdle").innerHTML = seconds;
+            document.getElementsByName("seconds").innerHTML = seconds;
+
+            setInterval(function () {
+                seconds--;
+                document.getElementById("seconds").innerHTML = seconds;
+                document.getElementById("secondsIdle").innerHTML = seconds;
+            }, 1000);
+
+            setTimeout(function () {
+                $("#window").data("kendoWindow").center();
+                $("#window").data("kendoWindow").open();
+            }, timeout - (60 * 1000));
+
+            setTimeout(function () {
+                window.location = "http://localhost:13800/";
+            }, timeout);
+
+        };
+
+    function ResetSession() {
+        //Redirect to refresh Session.
+        window.location = window.location.href;
+    }
+
+    function CloseWindows() {
+        var radwindow = $find('<%=modalPopup.ClientID %>');
+        radwindow.close();
+    }
+
+</script>
+
 </body>
 </html>
