--- a/mksolucion/Views/Shared/_LoginPartial.cshtml
+++ b/mksolucion/Views/Shared/_LoginPartial.cshtml
@@ -16,6 +16,9 @@
         @Html.ActionLink("Hola " + User.Identity.GetUserName() + "!", "Index", "portalcliente", routeValues: null, htmlAttributes: new { title = "Portal Clientes", @class = "nav-link link dropdown-toggle", data_toggle = "dropdown-submenu", aria_expanded = "true" })
         <ul>
             <li>
+                @Html.ActionLink("Soporte", "Index", "soporte", new { area = "portal" }, new { @class = "dropdown-item" })
+            </li>
+            <li>
                 @Html.ActionLink("Notificaciones", "Index", "notificaciones", new { area = "portal" }, new { @class = "dropdown-item" })
             </li>
             <li>
@@ -25,8 +28,6 @@
                 @Html.ActionLink("Cuenta", "Index", "Configuraciones", new { area = "" }, new { @class = "dropdown-item" })
             </li>
         </ul>
-
-
 </li>
 
 
