--- a/mksolucion/Areas/portal/Views/TipoNotificacionCorreo/Edit.cshtml
+++ b/mksolucion/Areas/portal/Views/TipoNotificacionCorreo/Edit.cshtml
@@ -12,7 +12,7 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>ntf02_tiponotificacioncorreo</h4>
+        <h4>Complete la información solicitada</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.ntf02_id)
