--- a/mksolucion/Areas/portal/Views/TipoPlanes/Details.cshtml
+++ b/mksolucion/Areas/portal/Views/TipoPlanes/Details.cshtml
@@ -1,15 +1,32 @@
 ﻿@model mksolucion.Models.pln02_tipoplan
 
 @{
-    ViewBag.Title = "Detalle Tipo de Plan";
-    Layout = Session["layout"].ToString();
+    ViewBag.Title = "Details";
+    Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 
-<h2>Detalle de Tipo de Plan </h2>
+<h2>Details</h2>
 
 <div>
+    <h4>pln02_tipoplan</h4>
     <hr />
     <dl class="dl-horizontal">
+        <dt>
+            @Html.DisplayNameFor(model => model.gen01_estados.gen01_nombre)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.gen01_estados.gen01_nombre)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.pln03_tipocobro.pln03_nombre)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.pln03_tipocobro.pln03_nombre)
+        </dd>
+
         <dt>
             @Html.DisplayNameFor(model => model.pln02_nombre)
         </dt>
@@ -29,6 +46,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Editar", "Edit", new { id = Model.pln02_id }) |
-    @Html.ActionLink("Volver al Listado", "Index")
+    @Html.ActionLink("Edit", "Edit", new { id = Model.pln02_id }) |
+    @Html.ActionLink("Back to List", "Index")
 </p>
