--- a/mksolucion/Areas/portal/Views/TipoPlanes/Index.cshtml
+++ b/mksolucion/Areas/portal/Views/TipoPlanes/Index.cshtml
@@ -1,45 +1,46 @@
 ﻿@{
-    ViewBag.Title = "Tipos de Planes de Usuario";
+    ViewBag.Title = "Tipo Plan";
     Layout = Session["layout"].ToString();
 }
 
-            <h2>Tipos de Planes de Usuario</h2>
+<h2>Tipo Plan</h2>
 
-            <p>
-                @Html.ActionLink("Crear Nuevo", "Create")
-            </p>
-            
-            @(Html.Kendo().Grid<mksolucion.Models._pnl02_tipoplan>()
-                  .Name("grid")
-                  .Columns(columns =>
-                  {
-                      columns.Template(c =>
+<p>
+    @Html.ActionLink("Crear Nuevo", "Create")
+</p>
+
+@(Html.Kendo().Grid<mksolucion.Models._pnl02_tipoplan>()
+      .Name("grid")
+      .Columns(columns =>
+      {
+          columns.Template(c =>
                         Html.ActionLink("Editar", "Edit", new { Id = c.pln02_id })).ClientTemplate(Html.ActionLink(" ", "Edit", new { Id = "pln02_id" }, new { @style = "background:url('../../Content/assets/Images/btn/btn_edit.png') no-repeat center right; display:inline-block; height: 24px; width: 24px" }).ToHtmlString().Replace("pln02_id", "#=pln02_id#")).Width(24);
-                      columns.Template(c =>
-                        Html.ActionLink("Eliminar", "Delete", new { Id = c.pln02_id })).ClientTemplate(Html.ActionLink(" ", "Delete", new { Id = "pln02_id" }, new { @style = "background:url('../../Content/assets/Images/btn/btn_delete.png') no-repeat center right; display:inline-block; height: 24px; width: 24px" }).ToHtmlString().Replace("pln02_id", "#=pln02_id#")).Width(24);
-                      columns.Template(c =>
-                        Html.ActionLink("Detalle", "Details", new { Id = c.pln02_id })).ClientTemplate(Html.ActionLink(" ", "Details", new { Id = "pln02_id" }, new { @style = "background:url('../../Content/assets/Images/btn/btn_detail.png') no-repeat center right; display:inline-block; height: 24px; width: 24px" }).ToHtmlString().Replace("pln02_id", "#=pln02_id#")).Width(24);
-                      columns.Bound(c => c.pln02_nombre);
-                      columns.Bound(c => c.pln02_descripcion);
+          columns.Template(c =>
+            Html.ActionLink("Eliminar", "Delete", new { Id = c.pln02_id })).ClientTemplate(Html.ActionLink(" ", "Delete", new { Id = "pln02_id" }, new { @style = "background:url('../../Content/assets/Images/btn/btn_delete.png') no-repeat center right; display:inline-block; height: 24px; width: 24px" }).ToHtmlString().Replace("pln02_id", "#=pln02_id#")).Width(24);
+          columns.Template(c =>
+            Html.ActionLink("Detalle", "Details", new { Id = c.pln02_id })).ClientTemplate(Html.ActionLink(" ", "Details", new { Id = "pln02_id" }, new { @style = "background:url('../../Content/assets/Images/btn/btn_detail.png') no-repeat center right; display:inline-block; height: 24px; width: 24px" }).ToHtmlString().Replace("pln02_id", "#=pln02_id#")).Width(24);
 
-                  })
-              .ToolBar(toolbar =>
-              {
-                  toolbar.Excel();
-                  toolbar.Pdf();
-              })
-              .ColumnMenu()
-              .Pageable()
-              .Navigatable()
-              .Sortable(sortable =>
-              {
-                  sortable.SortMode(GridSortMode.MultipleColumn);
-              })
-              .Filterable()
-              .Scrollable(scrollable => scrollable.Enabled(false))
-              .DataSource(dataSource => dataSource
-                  .Ajax()
-                  .Read(read => read.Action("pln02_tipoplan_Read", "TipoPlanes"))
-              )
+          columns.Bound(c => c.pln02_nombre);
+        
+          columns.Bound(c => c.pln02_descripcion);
+        
+          columns.Bound(c => c._tipocobro.pln03_nombre);
+                   
+      })
+      .ToolBar(toolbar => {
+            toolbar.Excel();
+            toolbar.Pdf();
+      })
+      .ColumnMenu()
+      .Pageable()
+      .Navigatable()
+      .Sortable(sortable => {
+          sortable.SortMode(GridSortMode.MultipleColumn);
+      })
+      .Filterable()
+      .Scrollable(scrollable => scrollable.Enabled(false))
+      .DataSource(dataSource => dataSource
+          .Ajax()
+          .Read(read => read.Action("pln02_tipoplan_Read", "TipoPlanes"))
+      )
 )
-
