--- a/mksolucion/Views/Shared/_LayoutAdmin.cshtml
+++ b/mksolucion/Views/Shared/_LayoutAdmin.cshtml
@@ -78,9 +78,9 @@
                             <li>
                                 @Html.ActionLink("Planes", "Index", "Configuraciones", new { area = "" }, new { @class = "dropdown-item dropdown-toggle", data_toggle = "dropdown-submenu" })
                                 <ul>
-                                    <li>@Html.ActionLink("Planes", "Index", "Configuraciones", new { area = "portal" }, new { @class = "dropdown-item" })</li>
+                                    <li>@Html.ActionLink("Planes", "Index", "planes", new { area = "portal" }, new { @class = "dropdown-item" })</li>
                                     <li>@Html.ActionLink("Tipos de Planes", "Index", "tipoplanes", new { area = "portal" }, new { @class = "dropdown-item" })</li>
-                                    <li>@Html.ActionLink("Tipos de Cobro", "Index", "Tipocobro", new { area = "portal" }, new { @class = "dropdown-item" })</li>
+                                    <li>@Html.ActionLink("Tipos de Cobro", "Index", "tipocobro", new { area = "portal" }, new { @class = "dropdown-item" })</li>
                                 </ul>
                             </li>
                             <li>
