Actualiacion de plan.- telerik ok

--- a/mksolucion/Areas/portal/Views/TipoPlanes/Details.cshtml
+++ b/mksolucion/Areas/portal/Views/TipoPlanes/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model mksolucion.Models.pln02_tipoplan
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Detalle Tipos de Planes";
     Layout = Session["layout"].ToString();
 }
 
