--- a/mksolucion/Views/Shared/_Layout.cshtml
+++ b/mksolucion/Views/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="assets/images/logo.png" type="image/x-icon">
     <meta name="description" content="">
+    @RenderSection("header", required: false)
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 
     <title>@ViewBag.Title - Herramienta de Marketing</title>
