--- a/mksolucion/Views/Cuentas/ConfirmEmail.cshtml
+++ b/mksolucion/Views/Cuentas/ConfirmEmail.cshtml
@@ -25,7 +25,7 @@
                         Gracias por confirmar su correo electrónico. 
                     </p>
                     <p>
-                        @Html.ActionLink("Haga clic aquí para completar la informacion acerca de su cuenta", "Login", "Cuentas", routeValues: null, htmlAttributes: new { id = "loginLink" })
+                        @Html.ActionLink("Haga clic aquí para completar acceder a su cuenta", "Login", "Cuentas", routeValues: null, htmlAttributes: new { id = "loginLink" })
                     </p>
                 </div>
             </div>
