--- a/mksolucion/Areas/completarinformacion/Views/InformacionUsuario/Index.cshtml
+++ b/mksolucion/Areas/completarinformacion/Views/InformacionUsuario/Index.cshtml
@@ -39,13 +39,12 @@
                 @using (Html.BeginForm(null, null, FormMethod.Post, new { id = "signupform" }))
                 {
                     @Html.AntiForgeryToken()
-
                     <div class="form-horizontal">
-                        
-                        <div class="wizard-step">
-                            <div class="col-lg-12" style="text-align:center; padding-bottom:30px">
+                        <div class="wizard-step" style="padding: 40px 0 40px 0">
+                            <div class="col-lg-12" style="text-align:center; padding-bottom:30px;">
                                 <h1>Binvenido a MailCreativo</h1>
-                                <p>Cuentanos sobre ti, completando la siguiente informacion</p>
+                                <p>Este de ser tu primer ingreso.<br />
+                                Cuentanos sobre ti, completando la siguiente información</p>
                             </div>
                             <div class="form-group">
                                 @Html.LabelFor(model => model.Nombre, htmlAttributes: new { @class = "control-label col-md-4" })
@@ -63,10 +62,8 @@
                             </div>
                             
                         </div>
-
-
-                        <div class="wizard-step">
-                            <div class="col-lg-12" style="text-align:center">
+                        <div class="wizard-step" style="padding: 40px 0 40px 0">
+                            <div class="col-lg-12" style="text-align:center ;padding-bottom:30px;">
                                 <h1>Acerca de Tu empresa</h1>
                                 <p>Cuentanos sobre tu empresa para generar un perfil</p>
                             </div>
@@ -84,12 +81,11 @@
                                     @Html.ValidationMessageFor(model => model.Sitioweb, "", new { @class = "text-danger" })
                                 </div>
                             </div>
-                            
                         </div>
 
 
-                        <div class="wizard-step">
-                            <div class="col-lg-12" style="text-align:center">
+                        <div class="wizard-step" style="padding: 40px 0 40px 0">
+                            <div class="col-lg-12" style="text-align:center; padding-bottom:30px; ">
                                 <h1>AGREGA UNA DIRECCION</h1>
                                 <p>Cuentanos sobre tu empresa para generar un perfil</p>
                             </div>
@@ -128,10 +124,20 @@
                                     @Html.ValidationMessageFor(model => model.Pais, "", new { @class = "text-danger" })
                                 </div>
                             </div>
-                            
+
                         </div>
 
-
+                        <div class="wizard-step" style="padding: 40px 0 40px 0">
+                            <div class="col-lg-12" style="text-align:center ;padding-bottom:30px;">
+                                <h1>SUSCRIBETE PROMOCIONES Y EVENTOS</h1>
+                                
+                            </div>
+                            <div class="form-group">
+                                <div class="col-md-12">
+                                    <p>Quieres recibir e-mail semanales con promociones y eventos especiales @Html.CheckBox("Quieres recibir e-mail semanales con promociones y eventos especiales", true) </p>
+                                </div>
+                            </div>
+                        </div>
                         
                         <div class="wizard-step wizard-confirmation">
                             <div id="field-summary"></div>
@@ -229,18 +235,21 @@
                 var input = this;
                 value = input.value;
                 if (input.type == "text") {
-                    if (value == "") {
-                        valid = false;
-                        var attrExist = input.getAttribute('data-val-required');
-                        errorList.append("<li class='field-error'><label>" + attrExist + "</label></li>");
-                    } else {
-                        var attrlen = input.getAttribute('data-val-length-min');
-                        if (input.value.length < attrlen) {
+                    var attrExist = input.getAttribute('data-val-required') || '';
+                    if (attrExist != "" || attrExist.length > 0) {
+                        if (input.value.length <= 0) {
                             valid = false;
-                            var attrlen = input.getAttribute('data-val-length');
-                            errorList.append("<li class='field-error'><label>" + attrlen + "</label></li>");
+                            var attrExist = input.getAttribute('data-val-required');
+                            errorList.append("<li class='field-error'><label>" + attrExist + "</label></li>");
+                        } else {
+                            var attrlen = input.getAttribute('data-val-length-min');
+                            if (input.value.length < attrlen) {
+                                valid = false;
+                                var attrlen = input.getAttribute('data-val-length');
+                                errorList.append("<li class='field-error'><label>" + attrlen + "</label></li>");
+                            }
                         }
-                    }
+                    } 
                 }
                 });
                 if (!valid) {
@@ -276,7 +285,6 @@
         }
 
         function Submit() {
-            alert($("form").valid());
             if ($("form").valid()) { // validate all fields, including blank required fields
                 $("form").submit();
             }
