--- a/mksolucion/Views/Shared/_LoginPartial.cshtml
+++ b/mksolucion/Views/Shared/_LoginPartial.cshtml
@@ -13,7 +13,7 @@
                     </li>
     
     <li style="float:right">
-        @Html.ActionLink("Hola " + User.Identity.GetUserName() + "!", "Index", "portalcliente", routeValues: null, htmlAttributes: new { title = "Portal Clientes", @class = "nav-link link dropdown-toggle", data_toggle = "dropdown-submenu", aria_expanded = "true" })
+        @Html.ActionLink("Hola " + @Session["nmbrusr"].ToString() + "!", "Index", "portalcliente", routeValues: null, htmlAttributes: new { title = "Portal Clientes", @class = "nav-link link dropdown-toggle", data_toggle = "dropdown-submenu", aria_expanded = "true" })
         <ul>
             <li>
                 @Html.ActionLink("Soporte", "Index", "soporte", new { area = "portal" }, new { @class = "dropdown-item" })
