--- a/mksolucion/Areas/portal/Views/TipoSoporte/Index.cshtml
+++ b/mksolucion/Areas/portal/Views/TipoSoporte/Index.cshtml
@@ -23,6 +23,9 @@
           
         columns.Bound(c => c.con02_nombre);
         columns.Bound(c => c.con02_descripcion);
+        columns.Bound(c => c.con02_usuariocredencial);
+        columns.Bound(c => c.con02_usuariocredencialclave);
+        columns.Bound(c => c.con02_host);
         
       })
       .ToolBar(toolbar => {
