--- a/mksolucion/Views/Cuentas/registrofinalizado.cshtml
+++ b/mksolucion/Views/Cuentas/registrofinalizado.cshtml
@@ -16,11 +16,12 @@
         </div>
     </div>
 </section>
-<section class="mbr-section article" id="msg-box3-1" style="background-color: #f6f8f9; padding-top: 30px; padding-bottom: 30px;">
+<section class="mbr-section article" id="msg-box3-1" style="background-color: #f6f8f9; padding-top: 30px; padding-bottom: 30px; min-height:400px;">
     <div class="container">
         <div class="row">
             <div class="col-md-8 col-md-offset-2 text-xs-center">
                 <div>
+                    <h1>Inscripción Finalizada</h1>
                     <p>
                         Te hemos enviado un E-mail para verificar tu cuenta. 
                     </p>
