--- a/mksolucion/Views/Shared/_LayoutAdmin.cshtml
+++ b/mksolucion/Views/Shared/_LayoutAdmin.cshtml
@@ -109,15 +109,16 @@
                                 <ul>
                                     <li>@Html.ActionLink("reporte soporte", "reporteSoporte", "soporte", new { area = "portal" }, new { @class = "dropdown-item" })</li>
                                     <li>@Html.ActionLink("Tipo Soporte", "Index", "TipoSoporte", new { area = "portal" }, new { @class = "dropdown-item" })</li>
+                                    <li>@Html.ActionLink("Importancia Mail", "Index", "ImportanciaMail", new { area = "portal" }, new { @class = "dropdown-item" })</li>
+                                    <li>@Html.ActionLink("Importancia Mail", "Index", "ImportanciaMail", new { area = "portal" }, new { @class = "dropdown-item" })</li>
+                                    <li>@Html.ActionLink("Estado Mensajes", "Index", "EstadoMensaje", new { area = "portal" }, new { @class = "dropdown-item" })</li>
                                 </ul>
                             </li>
-
                             <li>
                                 @Html.ActionLink("Sistema", "Index", "sistema", new { area = "portal" }, new { @class = "dropdown-item dropdown-toggle", data_toggle = "dropdown-submenu" })
                                 <ul>
                                     <li>@Html.ActionLink("Estados de Activacón", "Index", "EstadosActivacion", new { area = "portal" }, new { @class = "dropdown-item" })</li>
                                     <li>@Html.ActionLink("Pasos Completar información", "Index", "pasoscompletarinformacion", new { area = "portal" }, new { @class = "dropdown-item" })</li>
-
                                 </ul>
                             </li>
                         </ul>
