--- a/mksolucion/Content/assets/theme/css/style.css
+++ b/mksolucion/Content/assets/theme/css/style.css
@@ -529,7 +529,7 @@ p.lead,
   opacity: 0.94; }
 
 .form-control {
-  background-color: #f5f5f5;
+ /* background-color: #f5f5f5;*/
   border-radius: 3px;
   box-shadow: none;
   color: #565656;
