--- a/mksolucion/Views/Cuentas/ConfirmEmail.cshtml
+++ b/mksolucion/Views/Cuentas/ConfirmEmail.cshtml
@@ -16,7 +16,7 @@
         </div>
     </div>
 </section>
-<section class="mbr-section article" id="msg-box3-1" style="background-color: #f6f8f9; padding-top: 30px; padding-bottom: 30px;">
+<section class="mbr-section article" id="msg-box3-1" style="background-color: #f6f8f9; padding-top: 30px; padding-bottom: 30px; min-height:400px;">
     <div class="container">
         <div class="row">
             <div class="col-md-8 col-md-offset-2 text-xs-center">
@@ -25,7 +25,7 @@
                         Gracias por confirmar su correo electrónico. 
                     </p>
                     <p>
-                        @Html.ActionLink("Haga clic aquí para completar acceder a su cuenta", "Login", "Cuentas", routeValues: null, htmlAttributes: new { id = "loginLink" })
+                        @Html.ActionLink("Haga clic aquí para acceder a su cuenta", "Login", "Cuentas", routeValues: null, htmlAttributes: new { id = "loginLink" })
                     </p>
                 </div>
             </div>
